# terminal-2048

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: app.h  argumentParser.cpp  argumentParser.h  argumentParser.hpp  board.cpp  board.h  board.hpp  game.cpp  game.h  game.hpp  main.cpp  move.cpp  move.h  popup.cpp  popup.h  popup.hpp  tile.cpp  tile.h  tile.hpp
